# PPO2324_chats

./: .gitignore  README.md  notas.md
FP02_1_BlackBox/: CMakeLists.txt  Time.cpp  Time.h  main.cpp
FP02_1_ChatGPT/: CMakeLists.txt  Time.cpp  Time.h  main.cpp
FP02_1_Gemini/: CMakeLists.txt  Time.h  main.cpp
FP02_2_ChatGPT/: CMakeLists.txt  circle.cpp  circle.h  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  square.cpp  square.h
FP02_2_Gemini/: CMakeLists.txt  Circle.cpp  Circle.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Square.cpp  Square.h  main.cpp
